<resources>
    <string name="app_name">Popular Movies App</string>
    <string name="main_title">Popular Movies</string>

    <string name="film_cell_image_description">filmImage</string>

    <string name="api_url">http://api.themoviedb.org/3</string>
    <string name="api_images_url">http://image.tmdb.org/t/p</string>
    <string name="label_synopsis">Synopsis</string>
    <string name="label_user_rating">User Rating</string>
    <string name="label_release_date">Release Date</string>
    <string name="label_movie_poster">Movie Poster</string>
    <string name="label_title">Title</string>
    <string name="loading_data_error">Error loading data! Please try again later.</string>
    <string name="no_internet_error">Sorry, without internet connection!</string>
    <string name="menu_sort_by">Sort by</string>
    <string name="tv_trailers_title">Trailers:</string>

    <string-array name="sort_by_readable_options">
        <item>Popularity</item>
        <item>Top rated</item>
    </string-array>

    <string-array name="sort_by_options">
        <item>popular</item>
        <item>top_rated</item>
    </string-array>

</resources>
